--- a/kdd2021.tex
+++ b/kdd2021.tex
@@ -398,7 +398,7 @@ For the learning of semi-supervised/self-supervised techniques (including CoLES)
 
 \subsubsection{Performance}
 
-Neural network training was performed on a single Tesla P-100 GPU card. For the training part of CoLES, the single training batch is processed in 142 milliseconds. For example, in the age group prediction dataset the single training batch contains 64 unique persons with 5 sub-sequences per person, i.e. 320 training sub-sequences in total, the mean number of transactions in a sub-sequence is 90, hence each batch contains about 28800 transactions.
+Neural network training was performed on a single Tesla P-100 GPU card. For the training part of CoLES, the single training batch is processed in 142 milliseconds. For example, in the age group prediction dataset the single training batch contains 64 unique persons with 5 sub-sequences per person, i.e. 320 training sub-sequences in total, the mean number of transactions in a sub-sequence is 90, hence, each batch contains about 28800 transactions.
 
 \subsubsection{Hyperparameters}
 
