--- a/icdm2021.bib
+++ b/icdm2021.bib
@@ -562,3 +562,36 @@
   year={2019},
   pages={5628--5637}
 }
+
+@article{shumovskaia2021linking,
+  title={Linking bank clients using graph neural networks powered by rich transactional data},
+  author={Shumovskaia, Valentina and Fedyanin, Kirill and Sukharev, Ivan and Berestnev, Dmitry and Panov, Maxim},
+  journal={International Journal of Data Science and Analytics},
+  pages={1--11},
+  year={2021},
+  publisher={Springer}
+}
+
+@article{Zbontar2021BarlowTS,
+  title={Barlow Twins: Self-Supervised Learning via Redundancy Reduction},
+  author={J. Zbontar and L. Jing and Ishan Misra and Y. LeCun and St{\'e}phane Deny},
+  journal={ArXiv},
+  year={2021},
+  volume={abs/2103.03230}
+}
+
+@article{Bardes2021VICRegVR,
+  title={VICReg: Variance-Invariance-Covariance Regularization for Self-Supervised Learning},
+  author={Adrien Bardes and J. Ponce and Y. LeCun},
+  journal={ArXiv},
+  year={2021},
+  volume={abs/2105.04906}
+}
+
+@article{Grill2020BootstrapYO,
+  title={Bootstrap Your Own Latent: A New Approach to Self-Supervised Learning},
+  author={Jean-Bastien Grill and Florian Strub and Florent Altch'e and C. Tallec and Pierre H. Richemond and Elena Buchatskaya and Carl Doersch and B. A. Pires and Zhaohan Daniel Guo and M. G. Azar and Bilal Piot and K. Kavukcuoglu and R. Munos and Michal Valko},
+  journal={ArXiv},
+  year={2020},
+  volume={abs/2006.07733}
+}
