--- a/sigmod2022.tex
+++ b/sigmod2022.tex
@@ -498,7 +498,7 @@ In addition to the aforementioned baselines, we compare our method with a superv
 \label{tab-pair-gen}
 \end{table}
 
-\subsubsection{Features of CoLES}
+\subsubsection{Design choices observations}
 
 To evaluate the proposed method of sub-sequence generation (see Section~\ref{sec-pos-pairs}) we compared it with two alternative strategies described in the Section~\ref{sec-training}. The results are presented in Table~\ref{tab-pair-gen}. The proposed random slices sub-sequence generation strategy significantly outperforms alternative strategies.
 %, what confirm theoretical results (see Section \ref{sec-theory}).
