--- a/sigmod2022.tex
+++ b/sigmod2022.tex
@@ -504,12 +504,113 @@ To evaluate the proposed method of sub-sequence generation (see Section~\ref{sec
 %, what confirm theoretical results (see Section \ref{sec-theory}).
 Also, note that the random samples strategy is similar to the augmentation strategy proposed by \cite{Yao2020SelfsupervisedLF}, and the random disjoint samples strategy is similar to sub-sequence generation proposed by \cite{Ma2020DisentangledSI}.
 
-We evaluated several possible loss functions and found that contrastive loss that can be considered as the basic variant of contrastive learning loss, performs on par or better than other losses on the downstream tasks. % (see Appendix~\ref{app-sec-design}, Table~\ref{tab-loss-type}).
+We evaluated several possible loss functions and found that contrastive loss that can be considered as the basic variant of contrastive learning loss, performs on par or better than other losses on the downstream tasks. (see Table~\ref{tab-loss-type}).
 This means that improvements obtained by more recent losses in object recognition tasks does not necessarily lead to gains in other downstream tasks.
 
 We also compared popular negative sampling strategies (distance-weighted sampling~\citep{Manmatha2017SamplingMI}, and hard-negative mining~\citep{Schroff2015FaceNetAU}) with random negative sampling strategy.
-% The results are shown in the Appendix~\ref{app-sec-design}, Table \ref{tab-neg-sampl}.
+The results are shown in the Table \ref{tab-neg-sampl}.
 We found that hard negative mining leads to a significant increase in quality on downstream tasks in comparison to random negative sampling.
+
+We consider several contrastive learning losses that showed promising performance on different datasets~\citep{Kaya2019DeepML} and some classical variants: contrastive~loss~\citep{Hadsell2006DimensionalityRB}, binomial deviance loss~\citep{Yi2014DeepML}, triplet loss \citep{Hoffer2015DeepML}, histogram~loss~\citep{Ustinova2016LearningDE}, and margin~loss~\citep{Manmatha2017SamplingMI}. The results of comparison are shown in the Table~\ref{tab-loss-type}.
+
+It is interesting to observe that even contrastive loss that can be considered as the basic variant of contrastive learning loss allows to get strong results on the downstream tasks (see Table \ref{tab-loss-type}). Our hypothesis is that an increase in the model performance on contrastive learning task does not always lead to an increase in performance on downstream tasks.
+
+As shown in Table \ref{tab-enc-type}, different choices of encoder architectures show comparable performance on the downstream tasks.
+
+\begin{table}
+\centering
+\caption{Comparison of encoder types}
+\begin{tabular}{lcccc}
+
+\toprule
+\textbf{Dataset} &
+\makecell{\textbf{Age group} \\ \small{Accuracy}} &
+\makecell{\textbf{Churn} \\ \small{AUROC}} &
+\makecell{\textbf{Assess} \\ \small{Accuracy}} &
+\makecell{\textbf{Retail} \\ \small{Accuracy}} \\
+\midrule
+
+\textbf{LSTM} & 0.621 & \textbf{0.823} & \textbf{0.620} & 0.535 \\
+\textbf{GRU} & \textbf{0.638} & 0.812 & 0.618 & \textbf{0.542} \\
+\textbf{Transformer} & 0.622 & 0.780 & 0.542 & 0.499 \\
+
+\bottomrule
+\end{tabular} \\
+\small{5-fold cross-validation metric is shown}
+\label{tab-enc-type}
+\end{table}
+
+\begin{table}
+\centering
+\caption{Comparison of contrastive learning losses}
+\begin{tabularx}{\linewidth}{Xcccc}
+\toprule
+\textbf{Dataset} &
+\makecell{\textbf{Age group} \\ \small{Accuracy}} &
+\makecell{\textbf{Churn} \\ \small{AUROC}} &
+\makecell{\textbf{Assess} \\ \small{Accuracy}} &
+\makecell{\textbf{Retail} \\ \small{Accuracy}} \\
+\midrule
+
+\textbf{Contrastive} \small{margin=0.5} & \textbf{0.639} & \textbf{0.823} & \textbf{0.618} & \textbf{0.542} \\
+\textbf{Binomial deviance} & 0.621 & 0.769 & 0.589 & 0.535 \\
+\textbf{Histogram} & 0.632 & 0.815 & 0.615 & 0.533 \\
+\textbf{Margin} & 0.638 & \textbf{0.823} & 0.612 & 0.541 \\
+\textbf{Triplet} & 0.636 & 0.781 & 0.600 & 0.541 \\
+
+\bottomrule
+\end{tabularx} \\
+\small{5-fold cross-validation metric is shown}
+\label{tab-loss-type}
+\end{table}
+
+\begin{table}
+\centering
+\caption{Comparison of negative sampling strategies}
+\begin{tabularx}{\linewidth}{Xcccc}
+\toprule
+\textbf{Dataset} &
+\makecell{\textbf{Age group} \\ \small{Accuracy}} &
+\makecell{\textbf{Churn} \\ \small{AUROC}} &
+\makecell{\textbf{Assessment} \\ \small{Accuracy}} &
+\makecell{\textbf{Retail} \\ \small{Accuracy}} \\
+\midrule
+
+\textbf{Hard negative mining} & \textbf{0.639} & \textbf{0.823} & \textbf{0.618} & \textbf{0.542} \\
+\textbf{Random negative sampling} & $0.626$ & $0.815$ & $0.593$ & $0.530$ \\
+\textbf{Distance-weighted sampling} & $0.629$ & $0.821$ & $0.603$ & $0.536$ \\
+
+\bottomrule
+\end{tabularx} \\
+\small{5-fold cross-validation metric is shown}
+\label{tab-neg-sampl}
+\end{table}
+
+Figure \ref{fig-emb-dim} shows that the performance quality on the downstream task increases with the dimensionality of an embedding. After the best quality is achieved, a further increase in the dimensionality of an embedding dramatically reduces quality.
+These results can be interpreted as the bias-variance trade-off. When the embedding dimensionality is too small, too much information can be discarded (high bias). On the other hand, when embedding dimensionality is too large, too much noise is added (high variance).
+Note, that increasing the embedding size will also linearly increase the training time and the volume of consumed memory on the GPU.
+
+\begin{figure*}
+  \centering
+  \caption{Embedding dimensionality vs. quality}
+  \begin{subfigure}{0.25\linewidth}
+    \caption{Age group}
+    \includegraphics[width=\linewidth]{figures/hidden_size_age_pred.pdf}
+  \end{subfigure}%
+  \begin{subfigure}{0.25\linewidth}
+    \caption{Churn}
+    \includegraphics[width=\linewidth]{figures/hidden_size_rosbank.pdf}
+  \end{subfigure}%
+  \begin{subfigure}{0.25\linewidth}
+    \caption{Assessment}
+    \includegraphics[width=\linewidth]{figures/hidden_size_bowl2019.pdf}
+  \end{subfigure}%
+  \begin{subfigure}{0.25\linewidth}
+    \caption{Retail}
+    \includegraphics[width=\linewidth]{figures/hidden_size_x5.pdf}
+  \end{subfigure}
+  \label{fig-emb-dim}
+\end{figure*}
 
 \subsubsection{Self-supervised embeddings}
 
@@ -891,111 +992,6 @@ For example, for age prediction task we have one categorical attribute (small gr
 Note, that hand-crafted features contain information about user spending profile but omit information about transactions temporal order.
 
 \section{Results} \label{app-sec-res}
-
-\subsection{Design choices observations} \label{app-sec-design}
-
-We consider several contrastive learning losses that showed promising performance on different datasets~\citep{Kaya2019DeepML} and some classical variants: contrastive~loss~\citep{Hadsell2006DimensionalityRB}, binomial deviance loss~\citep{Yi2014DeepML}, triplet loss \citep{Hoffer2015DeepML}, histogram~loss~\citep{Ustinova2016LearningDE}, and margin~loss~\citep{Manmatha2017SamplingMI}. The results of comparison are shown in the Table~\ref{tab-loss-type}.
-
-It is interesting to observe that even contrastive loss that can be considered as the basic variant of contrastive learning loss allows to get strong results on the downstream tasks (see Table \ref{tab-loss-type}). Our hypothesis is that an increase in the model performance on contrastive learning task does not always lead to an increase in performance on downstream tasks.
-
-As shown in Table \ref{tab-enc-type}, different choices of encoder architectures show comparable performance on the downstream tasks.
-
-\begin{table}
-\centering
-\caption{Comparison of encoder types}
-\begin{tabular}{lcccc}
-
-\toprule
-\textbf{Dataset} &
-\makecell{\textbf{Age group} \\ \small{Accuracy}} &
-\makecell{\textbf{Churn} \\ \small{AUROC}} &
-\makecell{\textbf{Assess} \\ \small{Accuracy}} &
-\makecell{\textbf{Retail} \\ \small{Accuracy}} \\
-\midrule
-
-\textbf{LSTM} & 0.621 & \textbf{0.823} & \textbf{0.620} & 0.535 \\
-\textbf{GRU} & \textbf{0.638} & 0.812 & 0.618 & \textbf{0.542} \\
-\textbf{Transformer} & 0.622 & 0.780 & 0.542 & 0.499 \\
-
-\bottomrule
-\end{tabular} \\
-\small{5-fold cross-validation metric is shown}
-\label{tab-enc-type}
-\end{table}
-
-\begin{table}
-\centering
-\caption{Comparison of contrastive learning losses}
-\begin{tabularx}{\linewidth}{Xcccc}
-\toprule
-\textbf{Dataset} &
-\makecell{\textbf{Age group} \\ \small{Accuracy}} &
-\makecell{\textbf{Churn} \\ \small{AUROC}} &
-\makecell{\textbf{Assess} \\ \small{Accuracy}} &
-\makecell{\textbf{Retail} \\ \small{Accuracy}} \\
-\midrule
-
-\textbf{Contrastive} \small{margin=0.5} & \textbf{0.639} & \textbf{0.823} & \textbf{0.618} & \textbf{0.542} \\
-\textbf{Binomial deviance} & 0.621 & 0.769 & 0.589 & 0.535 \\
-\textbf{Histogram} & 0.632 & 0.815 & 0.615 & 0.533 \\
-\textbf{Margin} & 0.638 & \textbf{0.823} & 0.612 & 0.541 \\
-\textbf{Triplet} & 0.636 & 0.781 & 0.600 & 0.541 \\
-
-\bottomrule
-\end{tabularx} \\
-\small{5-fold cross-validation metric is shown}
-\label{tab-loss-type}
-\end{table}
-
-\begin{table}
-\centering
-\caption{Comparison of negative sampling strategies}
-\begin{tabularx}{\linewidth}{Xcccc}
-\toprule
-\textbf{Dataset} &
-\makecell{\textbf{Age group} \\ \small{Accuracy}} &
-\makecell{\textbf{Churn} \\ \small{AUROC}} &
-\makecell{\textbf{Assessment} \\ \small{Accuracy}} &
-\makecell{\textbf{Retail} \\ \small{Accuracy}} \\
-\midrule
-
-\textbf{Hard negative mining} & \textbf{0.639} & \textbf{0.823} & \textbf{0.618} & \textbf{0.542} \\
-\textbf{Random negative sampling} & $0.626$ & $0.815$ & $0.593$ & $0.530$ \\
-\textbf{Distance-weighted sampling} & $0.629$ & $0.821$ & $0.603$ & $0.536$ \\
-
-\bottomrule
-\end{tabularx} \\
-\small{5-fold cross-validation metric is shown}
-\label{tab-neg-sampl}
-\end{table}
-
-\subsection{Embedding size}
-
-\begin{figure*}
-  \centering
-  \caption{Embedding dimensionality vs. quality}
-  \begin{subfigure}{0.25\linewidth}
-    \caption{Age group}
-    \includegraphics[width=\linewidth]{figures/hidden_size_age_pred.pdf}
-  \end{subfigure}%
-  \begin{subfigure}{0.25\linewidth}
-    \caption{Churn}
-    \includegraphics[width=\linewidth]{figures/hidden_size_rosbank.pdf}
-  \end{subfigure}%
-  \begin{subfigure}{0.25\linewidth}
-    \caption{Assessment}
-    \includegraphics[width=\linewidth]{figures/hidden_size_bowl2019.pdf}
-  \end{subfigure}%
-  \begin{subfigure}{0.25\linewidth}
-    \caption{Retail}
-    \includegraphics[width=\linewidth]{figures/hidden_size_x5.pdf}
-  \end{subfigure}
-  \label{fig-emb-dim}
-\end{figure*}
-
-Figure \ref{fig-emb-dim} shows that the performance quality on the downstream task increases with the dimensionality of an embedding. After the best quality is achieved, a further increase in the dimensionality of an embedding dramatically reduces quality.
-These results can be interpreted as the bias-variance trade-off. When the embedding dimensionality is too small, too much information can be discarded (high bias). On the other hand, when embedding dimensionality is too large, too much noise is added (high variance).
-Note, that increasing the embedding size will also linearly increase the training time and the volume of consumed memory on the GPU.
 
 % !!! REMOVED BLOCK
 \iffalse
